

public class Main {

    public static void main(String[] args) throws NoSuchFieldException, IllegalAccessException {


        Integer a = new Integer(1000);
        Integer b = new Integer(1000);
        System.out.println(a==b);//
    }
}
